fixed bug that caused upload icon flickering when hovering a file over upload icon

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -169,6 +169,7 @@ body{
 
 .header svg {
   height: 100px;
+  pointer-events: none;
 }
 
 .header p {
